# web_sqlx

./: .env  Cargo.toml  README.md
src/: main.rs
