[package]
name = "web_sqlx"
version = "0.1.1"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4.8"
cfg-if = "0.1"
dotenv = "0.15"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
chrono = "0.4"
tokio = {version = "0.2.16", features = ["full"] }
actix-web = "2.0" # 2.0
actix-rt = "1.0" # 2.0
actix-service = "1.0"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
async-native-tls = { version = "0.3", default-features = false, features = [ "runtime-tokio" ] }
mysql = {version = "18", optional = true}
postgres = {version = "0.17", optional = true}
postgres-shared = {version = "0.4", optional = true}
sqlx-core = {version = "0.3.3", default-features=false, features = [ "runtime-tokio" ]}

[dependencies.sqlx]
version = "0.3"
default-features = false
features = [ "runtime-tokio", "macros", "postgres", "mysql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]


[features]
default = ["with-mysql"]
with-postgres = ["postgres",  "postgres-shared"]
# with-sqlite = ["rusqlite","r2d2_sqlite"]
with-mysql = ["mysql"]
