[package]
name = "web_sqlx"
version = "0.3.0"
authors = ["Daniel <qiuzhanghua@icloud.com>"]
edition = "2018"

[dependencies]
log = "0.4"
cfg-if = "0.1"
dotenv = "0.15"
env_logger = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
lazy_static = "1.4"
chrono = "0.4"
tokio = {version = "1", features = ["full"] }
actix-web = "4.0.0-beta.3"
# actix-web = "3"
actix-rt = "^2"
# actix-service = "1"
futures = "0.3"
uuid = { version = "0.8", features = ["serde", "v4", "v5"] }
mysql = {version = "20", optional = true}
postgres = {version = "0.19", optional = true}
postgres-shared = {version = "0.4", optional = true}
# nom = "^6.1.2"

[dependencies.sqlx]
version = "0.5"
default-features = false
features = [ "runtime-actix-native-tls", "macros", "postgres", "mysql", "mssql", "sqlite",  "uuid", "chrono", "bigdecimal", "json", "ipnetwork", "tls"]


[features]
default = ["with-mysql"]
with-postgres = ["postgres",  "postgres-shared"]
# with-sqlite = ["rusqlite","r2d2_sqlite"]
with-mysql = ["mysql"]
#with-mssql = ["tiberius"]
